--- a/client/package.json
+++ b/client/package.json
@@ -4,16 +4,15 @@
   "private": true,
   "dependencies": {
     "axios": "^0.18.0",
-    "bootstrap": "^4.1.1",
-    "react": "^16.4.1",
-    "react-dom": "^16.4.1",
+    "bootstrap": "^4.1.3",
+    "react": "^16.5.2",
+    "react-dom": "^16.5.2",
     "react-redux": "^5.0.7",
-    "react-scripts": "1.1.4",
-    "react-transition-group": "^2.3.1",
-    "reactstrap": "^6.1.0",
+    "react-scripts": "^1.1.5",
+    "react-transition-group": "^2.5.0",
+    "reactstrap": "^6.4.0",
     "redux": "^4.0.0",
-    "redux-thunk": "^2.3.0",
-    "uuid": "^3.3.0"
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
